fix: footer alignment

--- a/src/style.css
+++ b/src/style.css
@@ -14,16 +14,35 @@ header{
   font-size: 1.4em;
 }
 #wrapper{
+  width: 80vw;
+  margin: 0 auto;
 }
 
 footer{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #bed09f;
   bottom: 0;
   color: #789e4f;
+  height: 5em;
 }
 
+footer h1{
+  font-size: 1.2em;
+}
+.footerwrapper{
+  width: 90vw;
+  display: flex;
+  justify-content: center;
+}
 footer ul{
   list-style-type: none;
+  margin-top: 0.5em;
+}
+
+footer ul li{
+  display: inline;
+  margin: 0 1em;
 }
